# learning-os

./: AGENTS.md  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: design.md  implementation.md
app/: __init__.py
app/api/: app.py  errors.py  middleware.py
app/api/routes/: health.py
app/core/: __init__.py  config.py  errors.py  ids.py  logging.py  states.py  time.py
app/db/: __init__.py  session.py
app/db/migrations/: README.md  env.py
app/db/migrations/versions/: 20260607_0001_create_courses.py
app/db/models/: __init__.py  course.py
app/web/: routes.py
app/web/templates/: base.html
app/web/templates/courses/: detail.html  index.html
app/web/templates/errors/: not_found.html
docs/: 00-project-brief.md  01-requirements.md  02-architecture-mermaid.md  03-kanban-board.md  04-roadmap-and-milestones.md  05-decision-log.md  06-risk-register.md  07-engineering-standards.md  08-github-bootstrap.md  09-lightweight-requirements-discovery.md  agent-github-operating-guide.md  github-workflow.md
docs/adr/: 010-mvp-runtime-and-serving-stack.md  README.md
tests/: test_alembic_setup.py  test_api_contracts.py  test_app_package.py  test_app_shell.py  test_core_config.py  test_core_errors.py  test_core_ids.py  test_core_logging.py  test_core_states.py  test_core_time.py  test_course_model.py  test_course_web.py  test_db_session.py  test_request_tracing.py
