[project]
name = "learning-os"
version = "0.1.0"
description = "Course-aware, source-grounded, learner-adaptive knowledge graph tutor."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = []

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = []

[tool.ty.environment]
python = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]
